# azcam-itl

./: .gitignore  README.md  install.py  pyproject.toml
azcam_itl/: __init__.py  azcamitl.py  console.py  console_itl.py  detectors.py  index_ITL.html  itl.py  itl_command.py  itl_start.py  itlutils.py  local_web.py  server.py  server_itl.py  shortcuts.py  shortcuts_itl.py  start.py  start_console.py  start_ipython.py  start_itl.py  startazcam.py  test_nicegui.py
azcam_itl/configs/: config_server_90prime4k.py  config_server_ASI183.py  config_server_ASI2600MM.py  config_server_ASI294.py  config_server_ASI6200MM.py  config_server_DESI.py  config_server_EB.py  config_server_IMX411.py  config_server_ITL4k.py  config_server_ITL6k.py  config_server_LVM.py  config_server_OSU4k.py  config_server_QB.py  config_server_QHY174.py  config_server_VIRUS.py  config_server_electronbench.py  config_server_magguider.py  config_server_mock.py  config_server_prober.py  config_server_quantumbench.py  config_server_soguider.py
azcam_itl/detchars/: detchar_90prime4k.py  detchar_ASI183.py  detchar_ASI2600MM.py  detchar_ASI2600MM_xxx.py  detchar_ASI294.py  detchar_ASI6200MM.py  detchar_DESI.py  detchar_IMX411.py  detchar_ITL4k.py  detchar_LVM.py  detchar_OSU4k.py  detchar_QHY174.py  detchar_VIRUS.py  detchar_prober2001.py
azcam_itl/instruments/: DONOTUSE_pressure_vgc401.py  arduino_qb.py  autofill.py  ebserver_leds.ino  electroglas_4090.py  filters_bb.py  instrument_arduino.py  instrument_bb.py  instrument_eb.py  instrument_flex.py  instrument_flex_old.py  instrument_gort.py  instrument_prober.py  instrument_qb.py  (+15 more)
docs/: install_notes.txt
support/: azcamconsole.lnk  azcamconsole.py  azcamserver.lnk  azcamtool.lnk  clone_azcam.bat  clone_install_azcam-itl.bat  configure_LVM.py  git_clone_azcam_repos.py  index_ITL.html  install.py  install_azcam_extensions_edit_mode.bat  itl_console.lnk  itl_server.lnk  notes.md  parameters_monitor_VIRUS.ini  parameters_monitor_itl.ini  requirements_filters_eb.txt  requirements_min.txt  requirements_non-azcam.txt  settings.json  setup_time_sync.ps1  start_console_itl.py  start_monitor_itl.bat  start_monitor_itl.py  start_server_90prime4k.bat  start_server_90prime4k.py  start_server_ASI294.bat  start_server_DESI.bat  start_server_DESI.py  start_server_ITL4k.bat  start_server_itl.py  start_split_server_console.bat  start_tabbed_server_console.bat
(+51 files in other folders)
