[project]
dependencies = [
    "numpy",
    "ipython",
    "rich",
    "matplotlib",
    "keyring",
    "pyserial",
    "pyvisa",
    "opencv-python-headless",
    "pyside6",
    "azcam-testers",
    "azcam",
    "azcam-server",
    "azcam-console",
]
name = "azcam-itl"
version = "23.0"
description = "Azcam extension for ITL systems"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-itl/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_itl"
