[project]
dependencies = [
    "ipython",
    "rich",
    "keyring",
    "pyserial",
    "pyvisa",
    "opencv-python-headless",
    "azcam",
    "azcam_console",
]
name = "azcam-itl"
version = "24.1"
description = "Azcam extension for ITL systems"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-itl/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_itl"
